--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.7.3",
     "chart.js": "4.2.1",
     "next": "13.4.8",
     "primeflex": "^3.3.1",
